[tool.poetry]
name = "repl_python3_Moi-Et-Les-Bois-Bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
pydictionary = "^2.0.1"
flask = "^2.0.1"
py-thesaurus = "^1.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
